--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" src="https://drive.google.com/file/d/1HemvXlW3wBLwHBHVGY0VFlPq47ctoJX3/view?usp=sharing" />
+    <link rel="icon" src="public/slo-hikes-logo.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
